--- a/public/investors/index.html
+++ b/public/investors/index.html
@@ -33,6 +33,8 @@
         nav { display: flex; justify-content: space-between; align-items: center; padding: 2rem; background: rgba(5,5,5,0.95); position: sticky; top: 0; border-bottom: 1px solid var(--border); z-index: 1000; }
         .nav-links a { margin-left: 2rem; color: var(--muted); text-decoration: none; text-transform: uppercase; font-size: 0.9rem; letter-spacing: 0.05em; }
         .nav-links a:hover { color: #fff; }
+        .logo-link { font-weight:900; letter-spacing:0.1em; font-size:1.2rem; color: #fff; text-decoration: none; }
+        .logo-link:hover { color: #fff; }
 
         .hero-text span { background: linear-gradient(180deg, #fff 0%, #666 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
     </style>
@@ -40,11 +42,11 @@
 <body>
 
     <nav>
-        <div style="font-weight:900; letter-spacing:0.1em; font-size:1.2rem;">VERTIKAL <span style="color:#00C853">// CAPITAL</span></div>
+        <a href="https://vertikalapp.com" class="logo-link">VERTIKAL <span style="color:#00C853">// CAPITAL</span></a>
         <div class="nav-links">
-            <a href="https://vertikalapp.com">Main</a>
             <a href="../creators/index.html">Creators</a>
             <a href="../networks/index.html">Networks</a>
+            <a href="../investors/index.html">Investors</a>
             <a href="#deck" class="btn" style="padding:0.5rem 1.5rem; margin-top:0;">Deck</a>
         </div>
     </nav>
@@ -78,7 +80,7 @@
                 <img src="INVESTORS_BADGE_VERTIKAL.jpg" alt="Green Badge" class="badge-img">
                 <div>
                     <h3 style="color: var(--green);">Titanium Investor Badge</h3>
-                    <p style="margin:0;"><strong>The Capital Signal.</strong> This badge identifies early institutional partners. It grants pre-launch access, priority deal flow, and permanent equity recognition. It is not available post-launch. It represents ownership leverage.</p>
+                    <p style="margin:0; font-size: 1.1rem;"><strong>Pre-launch exclusivity. Permanent ownership signal.</strong> Early institutional partners only. Grants priority deal flow and permanent equity recognition. Not available post-launch. Represents ownership leverage.</p>
                 </div>
             </div>
         </div>
