--- a/public/index.html
+++ b/public/index.html
@@ -48,10 +48,17 @@
     .b-titanium { background: var(--titanium); box-shadow: 0 0 15px rgba(120, 144, 156, 0.2); }
 
     /* NAV */
-    nav { display: flex; justify-content: space-between; padding: 2rem; background: rgba(5,5,5,0.95); position: sticky; top: 0; border-bottom: 1px solid var(--border); z-index: 1000; }
+    nav { display: flex; justify-content: space-between; align-items: center; padding: 2rem; background: rgba(5,5,5,0.95); position: sticky; top: 0; border-bottom: 1px solid var(--border); z-index: 1000; }
     .logo { font-weight: 900; letter-spacing: 0.1em; }
+    .logo-img { height: 40px; width: auto; cursor: pointer; }
+    .nav-links { display: flex; align-items: center; }
     .nav-links a { margin-left: 2rem; color: var(--muted); text-decoration: none; text-transform: uppercase; font-size: 0.85rem; letter-spacing: 0.05em; }
     .nav-links a:hover { color: #fff; }
+    @media (max-width: 768px) {
+        nav { flex-wrap: wrap; }
+        .nav-links { margin-top: 1rem; width: 100%; }
+        .nav-links a { margin-left: 0; margin-right: 1rem; }
+    }
     
     /* POSTER CARDS */
     .poster-card { aspect-ratio: 9/16; background: var(--card); border: 1px solid var(--border); position: relative; overflow: hidden; cursor: pointer; }
@@ -60,8 +67,9 @@
     /* MODAL */
     .modal { display: none; position: fixed; z-index: 2000; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.9); align-items: center; justify-content: center; }
     .modal.active { display: flex; }
-    .modal-content { background: var(--card); border: 1px solid var(--border); padding: 3rem; max-width: 500px; width: 90%; position: relative; }
-    .close { position: absolute; top: 1rem; right: 1rem; font-size: 2rem; cursor: pointer; color: #fff; }
+    .modal-content { background: var(--card); border: 1px solid var(--border); padding: 3rem; max-width: 500px; width: 90%; position: relative; text-align: center; }
+    .close { position: absolute; top: 1rem; right: 1rem; font-size: 2rem; cursor: pointer; color: #fff; line-height: 1; }
+    .close:hover { color: #FFD700; }
     input, textarea { width: 100%; padding: 1rem; margin-bottom: 1rem; background: var(--bg); border: 1px solid var(--border); color: #fff; font-size: 1rem; font-family: var(--font-main); }
     input:focus, textarea:focus { outline: 1px solid #FFD700; }
     
@@ -74,12 +82,15 @@
 </head>
 <body>
     <nav>
-        <div class="logo">VERTIKAL</div>
+        <a href="https://vertikalapp.com">
+            <img src="assets/Vertikal_Logo_Master.png" alt="VERTIKAL" class="logo-img">
+        </a>
         <div class="nav-links">
             <a href="creators/index.html">Creators</a>
             <a href="networks/index.html">Networks</a>
             <a href="investors/index.html">Investors</a>
             <a href="beta/index.html" style="color: #FFD700;">Beta Live</a>
+            <a href="#" class="btn" style="padding:0.5rem 1.5rem; margin-left:1rem; margin-top:0;" onclick="event.preventDefault(); document.getElementById('demoModal').classList.add('active');">Watch Live Demo</a>
         </div>
     </nav>
 
@@ -240,6 +251,25 @@
             this.classList.remove('active');
         }
     });
+
+    // Demo Modal
+    document.getElementById('demoModal').addEventListener('click', function(e) {
+        if (e.target === this || e.target.classList.contains('close')) {
+            this.classList.remove('active');
+        }
+    });
     </script>
+
+    <!-- DEMO MODAL -->
+    <div id="demoModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="document.getElementById('demoModal').classList.remove('active');">&times;</span>
+            <h2 style="margin-bottom: 1.5rem; color: #fff;">Live Demo</h2>
+            <p style="color: var(--muted); font-size: 1.1rem; line-height: 1.6;">
+                Live demo launching March/April.<br>
+                Full beta expected June with at least 50 creators.
+            </p>
+        </div>
+    </div>
 </body>
 </html>
