--- a/public/networks/index.html
+++ b/public/networks/index.html
@@ -58,6 +58,16 @@
         .roi-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 2rem; margin-top: 2rem; }
         .roi-card { background: var(--card); border: 1px solid var(--border); padding: 2rem; border-left: 4px solid var(--titanium); }
         .roi-number { font-size: 3rem; font-weight: 900; color: var(--titanium); line-height: 1; margin-bottom: 0.5rem; }
+        
+        /* CHART PLACEHOLDER */
+        .chart-container { background: var(--card); border: 1px solid var(--border); padding: 2rem; margin-bottom: 2rem; min-height: 300px; display: flex; align-items: center; justify-content: center; }
+        .chart-placeholder { text-align: center; color: var(--muted); }
+        .chart-placeholder h3 { color: #fff; margin-bottom: 0.5rem; }
+        .chart-placeholder p { font-size: 0.9rem; }
+        
+        @media (max-width: 768px) {
+            .chart-container { min-height: 250px; padding: 1.5rem; }
+        }
     </style>
 </head>
 <body>
@@ -167,6 +177,13 @@
                 <div>
                     <h3 style="color:#fff;">Vertikal Investors</h3>
                     <p>Capital arm connecting institutional leverage.</p>
+                </div>
+            </div>
+            <div class="chart-container" style="margin-top: 3rem;">
+                <div class="chart-placeholder">
+                    <h3>Network Performance Metrics</h3>
+                    <p>Chart: Deal flow velocity and IP validation rates</p>
+                    <p style="font-size: 0.85rem; margin-top: 1rem; color: var(--muted);">Data visualization placeholder</p>
                 </div>
             </div>
         </div>
